# thomas

./: CLEANUP.md  HOWTO.md  README.md  WINDOWS_QUICKSTART.md  pyproject.toml  test_windows_connection.py
data/: finma.txt
src/thomas/: __init__.py  demo2.py  dict_demo.py  find_python.cmd  finma.py  full_rag.py  load.py  vdb.py
