[project]
name = "thomas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Miles", email = "andy@proquickly.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "bs4>=0.0.2",
]

[project.scripts]
thomas = "thomas:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
